Permission group implemented

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
-{% block content  %}
+{% block home  %}
+
 <!-- Hero Section -->
-<section class="bg-blue-600 text-white py-32 md:py-40">
-    <div class="container mx-auto px-6 text-center">
+  <section class="bg-gray-800 text-white py-32 md:py-40">
+    <div class="container mx-auto px-2 text-center">
       <h1 class="text-4xl md:text-5xl font-bold mb-6">
-        Streamline Your Workflow with TaskMaster
+        Streamline Your Workflow with TaskManager!
       </h1>
       <p class="text-xl mb-12">
         Empower your team with our intuitive task management solution
       </p>
       <a
         href="#"
-        class="bg-white text-blue-600 px-8 py-4 rounded-md font-semibold text-lg hover:bg-gray-100 transition duration-300"
+        class="bg-white text-gray-800 px-8 py-4 rounded-md font-semibold text-lg hover:bg-gray-100 transition duration-300"
         >Get Started</a
       >
     </div>
@@ -69,10 +70,10 @@
       </p>
       <a
         href="#"
-        class="bg-blue-500 text-white px-8 py-4 rounded-md font-semibold text-lg hover:bg-blue-600 transition duration-300"
+        class="bg-gray-800 text-white px-8 py-4 rounded-md font-semibold text-lg transition duration-300"
         >Start Free Trial</a
       >
     </div>
   </section>
 
-  {% endblock content %}
+  {% endblock home %}
