--- a/users/templates/admin/assign_role.html
+++ b/users/templates/admin/assign_role.html
@@ -1,16 +1,36 @@
 {% extends "admin/dashboard.html" %}
 {% block content %}
     <div class='w-1/2 mx-auto my-8'>
-        <ul>
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{form}}
+        <div class="mt-4 flex justify-center">
+            <button type="submit" class="px-4 py-2 bg-gray-800 text-white rounded hover:bg-gray-700 transition">
+                Assign Role
+            </button>
+        </div>
+    </form>
+</div>
+
+{% if messages %}
+          <div class="fixed top-16 right-4 z-50 space-y-2">
             {% for message in messages %}
-                <li class="bg-green-500 text-white px-1 py-2">{{message}}</li>
+              <div class="px-4 py-3 rounded shadow text-white text-bold
+                {% if message.tags == 'error' %} bg-red-600
+                {% elif message.tags == 'success' %} bg-green-600
+                {% else %} bg-blue-500
+                {% endif %}">
+                {{ message }}
+              </div>
             {% endfor %}
-        </ul>
-        <form action="" method="POST">
-            {% csrf_token %}
-            {{form}}
-            <button type="submit" class="mt-3 px-2 py-1 text-white bg-blue-500 rounded">Assign Role</button>
-        </form>
-    </div>
+          </div>
+
+          <script>
+            setTimeout(() => {
+              document.querySelectorAll('.z-50').forEach(el => el.remove());
+            }, 4000);
+          </script>
+{% endif %}
+
 {% endblock content %}
 
